# BGV-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md
src/app/: api.py  crew.py  main.py  processing.py  server.py  streaming.py
src/app/config/: agents.yaml
src/app/tools/: classification_tool.py  merge_logic_new.py  vision_tool.py
src/employee_verification_app/: api.py  crew.py  main.py  processing.py  server.py  streaming.py
src/employee_verification_app/config/: tasks.yaml
src/employee_verification_app/tools/: custom_tool.py  markdown_formatter.py  vision_tool.py
